# lambda-python-poetry-demo

./: .gitignore  .pre-commit-config.yaml  README.md  buildspec.yml  pyproject.toml
src/: lambda_function.py
tests/: test_lambda_function.py
