[tool.poetry]
name = "lambda-python-poetry-demo"
version = "0.1.0"
description = "AWS Lambda demo project using Poetry and CodeBuild"
authors = ["Shinya Tsuda <shinya@dacci.org>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = "~3.9"
boto3 = "^1.26.27"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pylint = "^2.15.8"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
boto3-mocking = "^0.1.1"

[tool.pylint.'MESSAGE CONTROL']
ignore-paths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
